# sprout

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.github/workflows/: release.yml
public/: global.css  inter.css
src/: import_screen.rs  index_screen.rs  interface.rs  lib.rs  libsprout.rs  main.rs  screens.rs  smapi.rs  views.rs  web.rs
src/components/: mod.rs  title_header.rs
src/components/css/: title_header.css
src/css/: import_screen.css  mod_screen.css
src/interface/: location_manager.rs  mod_scanner.rs  mod_types.rs  scanner.rs
src/libsprout/: mod_scanner.rs  mod_types.rs  path_manager.rs  smapi.rs
src/libsprout/smapi/: fetcher.rs  gh_decoder.rs  mod_decoder.rs
src/screens/: import_screen.rs  mod_screen.rs
src/smapi/: fetcher.rs  mod_decoder.rs
src/views/: download_mods.rs  import.rs  index.rs  mod_screen.rs  update_mods.rs
src/web/: smapi_fetcher.rs
