[package]
name = "sprout"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.5.1", features = ["desktop", "router"] }
dirs = "5.0.1"
json5 = "0.4.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
rfd = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
