[package]
name = "sprout"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.6.2", features = ["desktop", "router"] }
dirs = "6.0.0"
json5 = "0.4.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
rfd = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
